# EECE6083-Compiler

./: Cargo.toml  README.md  out.ll
funcLib/: Cargo.toml
funcLib/src/: lib.rs
src/: main.rs
src/models/: compiler.rs  lexer.rs  mod.rs  parser.rs  reporting.rs  typechecker.rs
testPgms/: testing.src
testPgms/correct/: math.src  recursiveFib.src  source.src  test1.src  test2.src
